--- a/about/index.html
+++ b/about/index.html
@@ -17,35 +17,46 @@
         </nav>
     </header>
     <main>
-        <h1>About Us</h1>
-        <p>
-           Welcome to Newspaper Media Agency, a cutting-edge digital publishing platform. Our mission is to revolutionize the way news is consumed and disseminated.
-           Our Story
-          Founded on a passion for innovative storytelling, Newspaper Media Agency aims to bridge the gap between traditional journalism and modern digital media.
-           Our Values
-           •    Quality Journalism: We strive to deliver accurate, unbiased, and engaging content that resonates with our audience.
-           •    
-           •    Innovation: We continuously explore new technologies and formats to enhance the reader experience.
-           •    
-           •    Community: We believe in fostering a collaborative environment where readers, writers, and creators can connect and share ideas.
-           •    
-           Our Team
-           Our diverse team consists of experienced journalists, developers, and designers dedicated to delivering exceptional content and user experiences.
-           Get in Touch
-           Want to learn more about Newspaper Media Agency or have a story to share? Contact us at [insert email address or contact form link].
-           Follow Us
-           Stay up-to-date with our latest news and updates on social media:
-               •    Twitter: [insert Twitter handle]
-               •    
-               •    LinkedIn: [insert LinkedIn page]
-               •    
-               •    GitHub: [insert GitHub repository link]
-               •    
-           Thank you for visiting Newspaper Media Agency!
-           Best regards,
-                       [Darius D. Smith, Director Agency]
-                        Newspaper Media Agency
-        </p>
+
+<h1>About Us</h1>
+
+<p>Welcome to Newspaper Media Agency, a cutting-edge digital publishing platform. Our mission is to revolutionize the way news is consumed and disseminated.</p>
+
+<h2>Our Story</h2>
+
+<p>Founded on a passion for innovative storytelling, Newspaper Media Agency aims to bridge the gap between traditional journalism and modern digital media. We're committed to:</p>
+
+<ul>
+<li><strong>Quality Journalism</strong>: Delivering accurate, unbiased, and engaging content that resonates with our audience.</li>
+<li><strong>Innovation</strong>: Exploring new technologies and formats to enhance the reader experience.</li>
+<li><strong>Community</strong>: Fostering a collaborative environment where readers, writers, and creators can connect and share ideas.</li>
+</ul>
+
+<h2>Our Team</h2>
+
+<p>Our diverse team consists of experienced journalists, developers, and designers dedicated to delivering exceptional content and user experiences.</p>
+
+<h2>Get in Touch</h2>
+
+<p>Want to learn more about Newspaper Media Agency or have a story to share? Contact us at <a href="mailto:your-email@example.com">your-email@example.com</a> or use our <a href="#">contact form</a>.</p>
+
+<h2>Follow Us</h2>
+
+<p>Stay up-to-date with our latest news and updates on social media:</p>
+
+<ul>
+<li><a href="(link unavailable)">Twitter</a></li>
+<li><a href="(link unavailable)">LinkedIn</a></li>
+<li><a href="(link unavailable)">GitHub</a></li>
+</ul>
+
+<p>Thank you for visiting Newspaper Media Agency!</p>
+
+<p>Best regards,</p>
+<p>Darius D. Smith
+Director, Newspaper Media Agency</p>
+
+
         <!-- About page content goes here -->
     </main>
 </body>
