--- a/about/index.html
+++ b/about/index.html
@@ -45,9 +45,9 @@
 <p>Stay up-to-date with our latest news and updates on social media:</p>
 
 <ul>
-<li><a href="(link unavailable)">Twitter</a></li>
+<li><a href="(www.x.com/mentalhealthent_nhm)">Twitter</a></li>
 <li><a href="(link unavailable)">LinkedIn</a></li>
-<li><a href="(link unavailable)">GitHub</a></li>
+<li><a href="(www.newspapermediaagency.github.io)">GitHub</a></li>
 </ul>
 
 <p>Thank you for visiting Newspaper Media Agency!</p>
